--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,3 +11,10 @@
  *= require_self
  *= require_tree .
  */
+@import "variables";
+@import "bootswatch";
+
+@import "bootstrap/bootstrap";
+@import "bootstrap-responsive";
+
+@import 'blacklight/blacklight';
