Added the .travis.yml file for using the Travis Continous integration service. Changed a bit in the color schemes

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -38,7 +38,7 @@ $textColor:             $gray !default;
 
 // Links
 // -------------------------
-$linkColor:             $blue !default;
+$linkColor:             $gray !default;
 $linkColorHover:        darken($linkColor, 15%) !default;
 
 
