--- a/app/views/catalog/show.html.erb
+++ b/app/views/catalog/show.html.erb
@@ -31,7 +31,7 @@
 
   <div class="well">
     <%= link_to 'Show details', "#{MODEL_REFERENCE_CONFIG[@document[:active_fedora_model_ssi]]}#{@document[:id]}", :class => 'btn btn-success' %>
-    <% if true || (has_user_authentication_provider? and current_user) %>
+    <% if  (has_user_authentication_provider? and current_user) %>
       <%= link_to 'Edit details', "#{MODEL_REFERENCE_CONFIG[@document[:active_fedora_model_ssi]]}#{@document[:id]}/edit", :class => 'btn  btn-warning' %>
     <%- end %>
   </div>
