--- a/app/assets/stylesheets/_bootswatch.scss
+++ b/app/assets/stylesheets/_bootswatch.scss
@@ -64,21 +64,23 @@ blockquote small {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
+  background-color: #004429;
 }
 .navbar .brand {
   float: left;
   display: block;
+  background-color: darkgreen;
   padding: 18px 20px 16px;
   margin-left: -20px;
   font-size: 20px;
-  font-family: 'Crete Round', serif;
+  font-family: "Open Sans",Calibri,Candara,Arial,sans-serif;
   font-weight: normal;
   color: white;
-  text-shadow: 0 1px 0 #54b4eb;
-  width: 150px;
+  text-shadow: 0 1px 0 #010101;
+  width: auto;
   background: transparent url(/assets/blacklight/logo.png) no-repeat top left;
   display: inline-block;
-  text-indent: 35%;
+  text-indent: 5em;
   white-space: nowrap;
   overflow: hidden;
   padding-right: 0;
@@ -87,7 +89,7 @@ blockquote small {
 }
 
 .navbar .brand:hover {
-  background-color: #002425;
+  background-color: #004429;
 }
 .navbar .nav > li > a {
   padding: 20px 20px 14px;
