--- a/app/views/catalog/_document.html.erb
+++ b/app/views/catalog/_document.html.erb
@@ -6,7 +6,7 @@
       <p>
         <%=
             if (document["path_to_image_ssm"].to_s.strip.length != 0)
-              image_tag ("http://www.kb.dk/imageService/w200/"+document["path_to_image_ssm"].first.to_s.sub('.tif', ".jpg"))
+              image_tag ("http://www.kb.dk/imageService/w200/"+document["path_to_image_ssm"].first.to_s.sub('.tif', ".jpg")) rescue nil
             end
         %>
       </p>
