less boosting. new home text

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -20,9 +20,9 @@ $white:                 #fff !default;
 
 // Accent colors
 // -------------------------
-$blue:                  #2FA4E7 !default;
+$blue:                  #015b4e !default;
 $blueDark:              #033C73 !default;
-$green:                 #73A839 !default;
+$green:                 #015b4e !default;
 $red:                   #C71C22 !default;
 $yellow:                #F7B42C !default;
 $orange:                #DD5600 !default;
