--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -1,6 +1,6 @@
-<h4><%= t('blacklight.welcome') %></h4>
+<h4>Bifrost Søgeinterface</h4>
 <p>&nbsp;</p>
-<p>Velkommen til det digitale bibliotek.</p>
+<p>Der søges i National Bibliotekets Billedsamling og studenteropgaverne under Københavns Universitets Bibliotek fra <a href="http://dias.kb.dk">DIAS</a> </p>
 
 <% #Creates a bit space in the page -%>
 
